# PJJ-Parallel-DEV

./: .gitignore  .mlx_model_name  AGENT_SYSTEM_READY.md  ARCHITECTURAL_CLEANUP_PHASES_1_4_COMPLETE.md  ARCHITECTURAL_CLEANUP_PRIORITY.md  ARCHITECTURAL_ISSUES_ANALYSIS.md  CHATBOX_GUIDE.md  CHATBOX_IMPLEMENTATION_SUMMARY.md  CHATBOX_QUICKREF.md  CHATBOX_STATUS_REPORT.md  CHATBOX_VERIFICATION_CHECKLIST.md  CLAUDE.md  CLAUDE_AGENTS_SYSTEM.md  CLEANUP_PLAN.md  COMPREHENSIVE_ANALYSIS.md  CONTENT_BLOCKS.md  CONVERSATION_SESSION_2025-10-24.md  CURSOR_PROMPTS.md  DEBUGGING_REPORT.md  FIX_SUMMARY.md  FRONTEND_BACKEND_CONTRACT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_RECOMMENDATIONS.md  INTEGRATION_VERIFICATION_REPORT.md  JUPITER_PROPOSAL_FOR_KPMG.md  KPMG_WORKFLOW_UNDERSTANDING.md  LEARNING_LOOP_IMPLEMENTATION_SUMMARY.md  MEETING_QUESTIONS_GUIDE.md  MODULARIZATION_COMPLETE.md  MODULARIZATION_PLAN.md  PHASES_3_5_DEEP_ANALYSIS.md  PLAN_QUALITY_IMPROVEMENT.md  PLAN_SELECTION_GATE_COMPLETE.md  PLAN_SELECTION_GATE_DESIGN.md  PRESENTATION_FLOWCHARTS_ASCII.md  PRESENTATION_OUTLINE.md  QUICK_REFERENCE.md  README.md  README_WEBSEARCH_FIX.md  (+17 more)
mem-agent-mcp/: .env.example  .memory_path  .mlx_model_name  ANALYSIS_README.md  ANALYSIS_SUMMARY.md  APPROVAL_GATE_DESIGN.md  ARCHITECTURAL_CONCERNS_STABILITY_VS_AUTONOMY.md  ARCHITECTURE_ISSUE_ANALYSIS.md  ARCHITECTURE_PLAN_VERIFICATION.md  ARCHITECTURE_REFACTORING_PLAN.md  CHECKPOINT_BUG_ROOT_CAUSE.md  COMPLETE_SYSTEM_STATUS.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONVERSATION_PROGRESS_NOV1_NOV4.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_GAPS_FIXED.md  CURRENT_SYSTEM_ANALYSIS.md  DEEP_GAP_ANALYSIS.md  DEVELOPMENT_CYCLE_3_SUBAGENT_HIERARCHY.md  Dockerfile  FINAL_STATUS.md  FIXED_PLANNING_SYSTEM_FLOWCHART.md  FIXES_APPLIED_AND_ISSUES.md  FIX_RECOMMENDATIONS.md  FLOW_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VALIDATION.md  ITERATION_MANAGER_ANALYSIS.md  ITERATION_MANAGER_QUICK_REF.md  LLAMA_PLANNER_DESIGN.md  MEMORY_FIRST_REFACTOR_SUMMARY.md  Makefile  OPTION_C_IMPLEMENTATION_COMPLETE.md  OPTION_C_IMPLEMENTATION_PLAN.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_DEPENDENCY_MAP.md  PHASE_1_FOUNDATION_SUMMARY.md  PHASE_1_UI_INTEGRATION_PLAN.md  PHASE_2_COMPLETION_SUMMARY.md  (+50 more)
mem-agent-mcp/agent/: agent.py  model.py  settings.py  system_prompt.txt  tools.py  utils.py
mem-agent-mcp/mcp_server/: http_server.py  mcp_http_server.py  mcp_sse_server.py  pyproject.toml  server.py  settings.py
(+1713 files in other folders)
