[project]
name = "mem-agent-mcp"
version = "0.1.0"
description = "MemAgent - Local memory planning system with multi-iteration learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "agent",
    "black>=25.1.0",
    "duckduckgo-search>=8.1.1",
    "fireworks-ai>=0.19.19",
    "rich>=13.7.0",
]

[tool.uv.workspace]
members = ["agent"]

[tool.uv.sources]
agent = { workspace = true }


