[project]
name = "mem-agent-mcp"
version = "0.1.0"
description = "MemAgent - Local memory planning system with multi-iteration learning"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "agent",
    "black>=25.1.0",
    "fireworks-ai>=0.19.19",
    "requests>=2.28.0",  # For Jina.ai/Reader API calls
    "rich>=13.7.0",
    "streamlit>=1.28.0",  # For Streamlit UI frontend
]

[tool.uv.workspace]
members = ["agent"]

[tool.uv.sources]
agent = { workspace = true }


